--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>image search engine</h1>
+    <h1>Copyright Free image search engine</h1>
     <form id="search-form">
         <input type="text" id="search-box" placeholder="Search anything here....">
         <button>Search</button>
